manifests/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cosignwebhook
  labels:
    app: cosignwebhook
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    app: cosignwebhook 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosignwebhook
  labels:
    app: cosignwebhook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cosignwebhook
  template:
    metadata:
      name: cosignwebhook 
      labels:
        app: cosignwebhook
    spec:
      containers:
        - name: cosignwebhook
          image: mtr.devops.telekom.de/caas/cosignwebhook:5.1.0
          imagePullPolicy: Always
          args:
            - -logLevel
            - info
          resources:
            limits:
              memory: 250Mi
              cpu: 500m
            requests:
              memory: 64Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: logs
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
      securityContext:
        fsGroup: 1000
        supplementalGroups:
        - 1000
      serviceAccount: cosignwebhook
      volumes:
        - name: webhook-certs
          secret:
            secretName: cosignwebhook
        - name: logs
          emptyDir: {}
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cosignwebhook
webhooks:
  - admissionReviewVersions:
    - v1
    name: cosignwebhook.caas.telekom.de
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["cosignwebhook", "kube-system", "cattle-system", "default"]
    clientConfig:
      service:
        name: cosignwebhook
        namespace: cosignwebhook
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQU1IbWFOZTdrdjNDYXVyVjFCWG5ObkF3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUlkyOXphV2R1TFhkbFltaHZiMnN0WTJFd0hoY05NalF3TVRFeU1UUXlNREExV2hjTgpNelF3TVRBNU1UUXlNREExV2pBY01Sb3dHQVlEVlFRREV4RmpiM05wWjI0dGQyVmlhRzl2YXkxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFMbStSZXN5bWxVZlRpNW5lY0hRY2EwdTE2THIKTFExZkt3SUhJbVpscDB5OG83ZXd1UE55U1dwZ3lEOHFzVUlXeE1Wa3huQjM2ekdrTDloK0h2ekQ4RjF2ckRydApXcEF1ek5ieEw [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    sideEffects: None
